[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Panel.gd" type="Script" id=1]
[ext_resource path="res://GFX/switch1on.png" type="Texture" id=2]
[ext_resource path="res://GFX/switch1off.png" type="Texture" id=3]
[ext_resource path="res://Scripts/ConsoleButton1.gd" type="Script" id=4]
[ext_resource path="res://GFX/switch2on.png" type="Texture" id=5]
[ext_resource path="res://GFX/switch2off.png" type="Texture" id=6]
[ext_resource path="res://Scripts/ConsoleButton2.gd" type="Script" id=7]
[ext_resource path="res://GFX/switch3on.png" type="Texture" id=8]
[ext_resource path="res://GFX/switch3off.png" type="Texture" id=9]
[ext_resource path="res://Scripts/ConsoleButton3.gd" type="Script" id=10]
[ext_resource path="res://GFX/switch4on.png" type="Texture" id=11]
[ext_resource path="res://GFX/switch4off.png" type="Texture" id=12]
[ext_resource path="res://Scripts/ConsoleButton4.gd" type="Script" id=13]

[node name="Panel" type="Area2D"]
script = ExtResource( 1 )

[node name="ConsoleButton1" type="TextureButton" parent="."]
margin_left = 6.0
margin_top = 10.0
margin_right = 70.0
margin_bottom = 74.0
rect_scale = Vector2( 0.8, 0.8 )
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
script = ExtResource( 4 )

[node name="ConsoleButton2" type="TextureButton" parent="."]
margin_left = 80.0
margin_top = 10.0
margin_right = 144.0
margin_bottom = 74.0
rect_scale = Vector2( 0.8, 0.8 )
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
script = ExtResource( 7 )

[node name="ConsoleButton3" type="TextureButton" parent="."]
margin_left = 167.0
margin_top = 10.0
margin_right = 231.0
margin_bottom = 74.0
rect_scale = Vector2( 0.8, 0.8 )
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
script = ExtResource( 10 )

[node name="ConsoleButton4" type="TextureButton" parent="."]
margin_left = 235.0
margin_top = 10.0
margin_right = 299.0
margin_bottom = 74.0
rect_scale = Vector2( 0.8, 0.8 )
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
script = ExtResource( 13 )
[connection signal="pressed" from="ConsoleButton1" to="." method="_on_ConsoleButton1_pressed"]
[connection signal="pressed" from="ConsoleButton2" to="." method="_on_ConsoleButton2_pressed"]
[connection signal="pressed" from="ConsoleButton3" to="." method="_on_ConsoleButton3_pressed"]
[connection signal="pressed" from="ConsoleButton4" to="." method="_on_ConsoleButton4_pressed"]
